# CPP_static

./: CMakeLists.txt  README.md  main.cpp  mylib.cpp  mylib.hpp
